# ChangeLog for sys-apps/openrc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.244 2012/11/21 16:36:20 blueness Exp $

  21 Nov 2012; Anthony G. Basile <blueness@gentoo.org> openrc-0.11.5.ebuild:
  stable ppc, bug #435756, thanks peratu

  19 Nov 2012; Agostino Sarubbo <ago@gentoo.org> openrc-0.11.5.ebuild:
  Stable for x86, wrt bug #435756

  19 Nov 2012; Agostino Sarubbo <ago@gentoo.org> openrc-0.11.5.ebuild:
  Stable for amd64, wrt bug #435756

*openrc-0.11.5 (10 Nov 2012)

  10 Nov 2012; William Hubbs <williamh@gentoo.org> +openrc-0.11.5.ebuild:
  version bump

  07 Nov 2012; William Hubbs <williamh@gentoo.org> ChangeLog:
  Fix references to $EROOT and $ED. References to $EROOT should be quoted
  and not followed with /. References to $ED should be quoted. This is for
  bug #442020. This applies to my last commit for openrc-9999.

  05 Nov 2012; William Hubbs <williamh@gentoo.org> -openrc-0.10.4.ebuild,
  -openrc-0.11.2.ebuild, -openrc-0.11.3.ebuild:
  remove several broken versions

*openrc-0.11.4 (05 Nov 2012)

  05 Nov 2012; William Hubbs <williamh@gentoo.org> +openrc-0.11.4.ebuild:
  version bump

*openrc-0.11.3 (05 Nov 2012)

  05 Nov 2012; William Hubbs <williamh@gentoo.org> +openrc-0.11.3.ebuild:
  version bump

*openrc-0.11.2 (22 Oct 2012)

  22 Oct 2012; William Hubbs <williamh@gentoo.org> +openrc-0.11.2.ebuild:
  Version bump for bug #439008. This fixes the non-bootable issue when systemd
  was installed.

*openrc-0.11.1 (20 Oct 2012)

  20 Oct 2012; William Hubbs <williamh@gentoo.org> +openrc-0.11.1.ebuild:
  version bump for bug #438932

*openrc-0.11 (18 Oct 2012)

  18 Oct 2012; William Hubbs <williamh@gentoo.org> +openrc-0.11.ebuild:
  version bump, bug #417391 tracks fixes.

  18 Oct 2012; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  Only show warning about adding the net script to the boot runlevel if
  necessary.
